# uv-workon

./: .buildinfo  .buildinfo.bak  .copier-answers.yml  .cruft.json  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  justfile  license.html  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  copier-update.yml  docs.yml  publish.yml  pypi-package.yml  reusable-docs.yml  test-docs-publish.yml  update-package-version.yml
_sources/: installation.md
_sources/reference/: cli.rst  index.md
_static/: documentation_options.js
changelog.d/: 20250312_135820_wpk_add_ipykernel_install.md  20250325_154955_wpk_update_cruft.md  20250325_170212_wpk_update_cruft.md  20250327_102245_wpk_add_venv_link.md  20250327_105602_wpk.md  20250530_122249_wpk_update_cruft.md  20250602_123324_wpk_rename_cli.md
config/: recipe-append.yaml
docs/: conf.py  installation.md
docs/examples/: example-usage.md
docs/examples/usage/: demo.ipynb
docs/reference/: cli.rst  index.md
reference/: cli.html  index.html
requirements/: py310-test-extras.yaml  py310-test.yaml  py311-test-extras.yaml  py311-test.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py314-dev.yaml  py314-test-extras.yaml  py314-test.yaml  uvx-tools.txt
requirements/lock/: uvx-tools.txt  uvxrun-tools.txt
src/uv_workon/: __init__.py  __main__.py  _click.py  _typing.py  _typing_compat.py  cli.py  core.py  kernels.py  utils.py  validate.py
src/uv_workon/scripts/: ipykernel_install_script.py  workon.sh
tests/: __init__.py  conftest.py  smoke.py  test_cli.py  test_core.py  test_create.py  test_kernels.py  test_smoke.py  test_utils.py  test_uv_workon.py  test_validate.py  utils.py
tools/: shared.just  uvxrun.py
