[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.10.0",
]

[project]
name = "uv-workon"
version = "0.7.2"
description = "Tools to activate and run virtual environments from central location"
readme = "README.md"
keywords = [
    "uv-workon",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "attrs>=25.3.0",
    "typer>=0.15.2",
    "typing-extensions>=4.12.2; python_full_version<'3.11'",
]

[project.optional-dependencies]
all = [
    "uv-workon[jupyter,menu]",
]
menu = [
    "simple-term-menu>=1.6.6",
]
jupyter = [
    "jupyter-client>=8.6.3",
]

[project.scripts]
uv-workon = "uv_workon.cli:app_typer"

[project.urls]
Documentation = "https://pages.nist.gov/uv-workon/"
Homepage = "https://github.com/usnistgov/uv-workon"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
test = [
    { include-group = "optional" },
    { include-group = "test-noopt" },
]
docs = [
    "autodocsumm",
    "myst-parser",
    "sphinx>=5.3.0",
    # extras
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-copybutton",
]
basedpyright = [ "basedpyright>=1.31.3" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
# other packages/tools
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.15.0" ]
nox = [ "nox>=2025.5.1" ]
# other environments
optional = [ "uv-workon[all]" ]
pylint = [ "pylint" ]
pytest = [ "pytest", "pytest-mock>=3.14.0" ]
test-extras = [
    { include-group = "test" },
]
test-noopt = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
typecheck = [
    "ipykernel",
    { include-group = "optional" },
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
typecheck-runner = [ "typecheck-runner>=0.1.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
dependency-groups.dev.requires-python = ">=3.14"
dependency-groups.docs-live.requires-python = ">=3.14"
dependency-groups.docs-spelling.requires-python = ">=3.14"
dependency-groups.docs.requires-python = ">=3.14"
# other tools
dependency-groups.ipython.requires-python = ">=3.14"
dependency-groups.mypy.requires-python = ">=3.14"
dependency-groups.nox.requires-python = ">=3.14"
fork-strategy = "requires-python"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

# source-include = [
#     "tests/**",
#     "examples/**",
#     "docs/**",
#     "tools/**",
#     "requirements/**",
#     "changelog.d/**",
#     "*.md",
#     "*.py",
#     "ruff.toml",
#     "uv.lock",
#     "[jJ]ustfile",
#     ".editorconfig",
#     ".markdownlint.yaml",
#     ".pre-commit-config.yaml",
#     ".prettierignore",
#     ".prettierrc.yaml",
#     ".pylintrc.toml",
#     ".python-version",
# ]

# source-exclude = [
#     "_build",
#     "docs/**/generated",
#     "docs/example/usage",
# ]

# * Checks ---------------------------------------------------------------------

[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
]

[tool.check-wheel-contents]
toplevel = [ "uv_workon" ]
src_dir = [ "src" ]

[tool.pyproject-fmt]
indent = 4
# max_supported_python = "3.13"
keep_full_version = true
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
]
collapse_tables = []

[tool.typos]
default.extend-identifiers.CPY = "CPY"

[tool.pytest]
# * Testing --------------------------------------------------------------------

ini_options.addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
ini_options.testpaths = [
    "README.md",
    "tests",
    "uv_workon",
]
ini_options.minversion = "8"
ini_options.log_cli_level = "INFO"
ini_options.log_level = "INFO"
ini_options.xfail_strict = true
ini_options.filterwarnings = [
    "error",
    "ignore: Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.coverage]
run.branch = true
paths.source = [
    "src/",
    # needed for non editable doctests
    ".nox/**/site-packages/",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
overrides = [ { ignore_missing_imports = true, module = [
    "shellingham.*",
    "simple_term_menu.*",
] } ]

[tool.pyrefly]
project-includes = [ "src", "tests" ]
enabled-ignores = [ "pyrefly" ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
]
typeCheckingMode = "strict"
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
# Extra flags
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
deprecateTypingAliases = true
enableReachabilityAnalysis = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
# reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateUsage = false  # dupe of PLC2701
reportPrivateImportUsage = false  # dupe of PLC2701
reportUnusedImport = false  # dupe of F401
reportUnusedVariable = false  # dupe of F841
executionEnvironments = [
    { root = "tests" },
    # reportCallIssue = false
    # reportArgumentType = false
    # reportMissingImports = false
    { reportUnusedCallResult = false },
]

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [ "src", "tests" ]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"
envs.dev.groups = "dev"
envs.pre-commit-additional-dependencies.reqs = [
    "rust-just",
]
envs.pre-commit-additional-dependencies.skip-package = true
envs.pre-commit-additional-dependencies.style = "requirements"
envs.test.groups = "test"
envs.test.python = "all"
envs.test-extras.groups = "test-extras"
envs.test-extras.python = "all"
envs.test-extras.skip-package = true
envs.uvx-tools.reqs = [
    "conda-lock>=2.5.5",
    "copier",
    "copier-template-extensions>=0.3.1",
    "grayskull>=2.5.3",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
envs.uvx-tools.groups = [
    "basedpyright",
    "mypy",
    "nox",
    "typecheck-runner",
]
envs.uvx-tools.skip-package = true
envs.uvx-tools.style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true
